--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -113,6 +113,8 @@ section {
     line-height: 26.7061px;
     letter-spacing: -0.25px;
     margin-right: 20px;
+    width: 75%;
+    max-width: 75%;
 }
 
 footer {
